--- a/app/src/main/res/layout/day.xml
+++ b/app/src/main/res/layout/day.xml
@@ -90,8 +90,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintWidth_percent="0.15"
-            tools:src="@drawable/ic_week"
-            tools:tint="#f9a920" />
+            android:src="@drawable/ic_week"
+            app:tint="#f9a920"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
