--- a/app/src/main/res/layout/day.xml
+++ b/app/src/main/res/layout/day.xml
@@ -38,8 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:text="25.0°C"
+            android:layout_marginBottom="8dp"
+            android:text="0°C"
             android:fontFamily="sans-serif"
             android:letterSpacing="0.00735294118"
             android:textAllCaps="false"
@@ -49,15 +49,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             />
+
+
 
         <TextView
             android:id="@+id/textView_condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
@@ -71,8 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
             />
 
         <ImageView
@@ -90,8 +92,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintWidth_percent="0.15"
-            android:src="@drawable/ic_week"
-            app:tint="#f9a920"
+            android:src="@drawable/ow01d"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
