--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.Skycast" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <!--<item name="colorPrimary">@color/purple_500</item>-->
+        <item name="colorPrimary">#DB593A</item>
+        <!--<item name="colorPrimaryVariant">@color/purple_700</item>-->
+        <item name="colorPrimaryVariant">#C74526</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">#3A5CDB</item>
+        <item name="colorSecondaryVariant">#3A24DB</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
