--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,14 +22,12 @@
             android:id="@+id/radio1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Metric"
-            android:onClick="checkMetric" />
+            android:text="Metric" />
         <RadioButton
             android:id="@+id/radio2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Imperial"
-            android:onClick="checkImperial" />
+            android:text="Imperial" />
     </RadioGroup>
 
 </RelativeLayout>
