--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- Reply Preference -->
     <string-array name="unitSystemValues">
-        <item>METRIC</item>
-        <item>IMPERIAL</item>
+        <item>metric</item>
+        <item>imperial</item>
     </string-array>
     <string-array name="unitSystemEntries">
         <item>Metric</item>
