--- a/app/src/main/res/layout/day.xml
+++ b/app/src/main/res/layout/day.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="1.1.2000"
+            android:text="1.1.1970"
             android:fontFamily="sans-serif"
             android:letterSpacing="0.03125"
             android:textAllCaps="false"
@@ -39,7 +39,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="0°C"
+            android:text="-"
             android:fontFamily="sans-serif"
             android:letterSpacing="0.00735294118"
             android:textAllCaps="false"
@@ -64,7 +64,7 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Clear"
+            android:text="No data"
             android:fontFamily="sans-serif"
             android:letterSpacing="0"
             android:textAllCaps="false"
