--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="30°C"
+        android:text="-"
         android:textSize="85sp"
         app:layout_constraintBottom_toBottomOf="@+id/mainFragText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:id="@+id/skyDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Clear sky"
+        android:text="No data"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/temp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:id="@+id/feelsLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Feels like: 25°C"
+        android:text="Feels like: "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="300m/s" />
+            android:text="-" />
 
     </LinearLayout>
 
@@ -136,7 +136,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="300.0 mm" />
+            android:text="-" />
 
     </LinearLayout>
 
@@ -170,7 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="300 km" />
+            android:text="-" />
 
     </LinearLayout>
 
