--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,56 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="0.18144"
+        android:scaleY="0.18144"
+        android:translateX="8.64"
+        android:translateY="8.64">
+        <path
+            android:pathData="M215.44,305.85h23.82l5.43,-5.2a7.65,7.65 0,0 1,10.61 0l5.43,5.2h23.82c0,-3.75 2.42,-7.5 7.25,-7.5h28.36a81.5,81.5 0,0 0,-54.33 -121.91c-33.28,-6.74 -68.23,8.91 -85.76,37.86a82.85,82.85 0,0 0,-0.52 84.06H208.2C213,298.35 215.44,302.1 215.44,305.85Z"
+            android:fillColor="#f8b62d"/>
+        <path
+            android:pathData="M180.07,214.3c17.54,-28.95 52.48,-44.6 85.76,-37.86a82.68,82.68 0,0 1,65.94 80.25c0.07,-9.66 15.07,-9.65 15,0a98,98 0,0 0,-64 -91.07C245,151.8 200.82,164 175.45,195.05c-23.69,29 -28.74,69.75 -12.79,103.3h16.88A82.85,82.85 0,0 1,180.07 214.3Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M331.77,256.69c0.07,9.65 15.07,9.67 15,0S331.84,247 331.77,256.69Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M331.77,256.69a83.48,83.48 0,0 1,-11.6 41.66H337a97.63,97.63 0,0 0,9.78 -41.66C346.84,266.36 331.84,266.34 331.77,256.69Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M257.5,131.84V98.18c0,-9.65 -15,-9.67 -15,0v33.65C242.5,141.49 257.5,141.5 257.5,131.84ZM250,98.18v0Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M194,144.78l-16.83,-29.15c-4.83,-8.36 -17.79,-0.81 -13,7.57l16.83,29.15C185.92,160.71 198.89,153.16 194,144.78ZM187.52,148.57 L170.69,119.42Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M108.94,183.91l29.15,16.83c8.38,4.84 15.94,-8.12 7.57,-13L116.51,171C108.14,166.13 100.57,179.08 108.94,183.91ZM112.73,177.43 L141.88,194.26Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M91.49,264.19h33.65c9.65,0 9.67,-15 0,-15L91.49,249.19C81.84,249.19 81.82,264.19 91.49,264.19ZM91.49,256.69h0Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M408.51,249.19L374.86,249.19c-9.65,0 -9.67,15 0,15h33.65C418.16,264.19 418.18,249.19 408.51,249.19ZM374.86,256.69h0Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M361.91,200.74l29.15,-16.83c8.36,-4.83 0.81,-17.79 -7.57,-13l-29.15,16.83C346,192.61 353.53,205.58 361.91,200.74ZM387.27,177.44 L358.12,194.27Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M318.9,152.35l16.83,-29.15c4.84,-8.37 -8.12,-15.94 -13,-7.57L306,144.78C301.12,153.15 314.07,160.72 318.9,152.35ZM329.25,119.42 L312.42,148.57Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M407.32,298.35H291.8c-4.83,0 -7.24,3.75 -7.25,7.5s2.41,7.5 7.25,7.5H407.32C417,313.35 417,298.35 407.32,298.35Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M171.58,313.35H208.2c4.83,0 7.24,-3.75 7.24,-7.5s-2.41,-7.5 -7.24,-7.5H92.68c-9.65,0 -9.67,15 0,15h78.89Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M375.15,338.46H294.81l-8.71,-8.33 -25.37,-24.28 -5.43,-5.2a7.65,7.65 0,0 0,-10.61 0l-5.43,5.2 -25.18,24.09 -8.9,8.51H124.85c-9.65,0 -9.67,15 0,15h61.74c7.14,0 14.48,0.49 21.61,0 3.86,-0.26 6.59,-3.27 9.22,-5.92l1,-0.94L219,346l10.72,-10.26 1.77,-1.69L250,316.36c6.65,6.5 13.25,13.12 20,19.61 3.5,3.38 7,6.73 10.63,10 0.69,0.63 1.39,1.24 2.08,1.86 1.24,1.11 2.47,2.22 3.73,3.3 5,4.36 15.88,2.34 22,2.34h66.82C384.8,353.46 384.82,338.46 375.15,338.46Z"
+            android:fillColor="#231815"/>
+        <path
+            android:pathData="M346.5,378.57h-193c-9.65,0 -9.67,15 0,15h193C356.15,393.57 356.17,378.57 346.5,378.57Z"
+            android:fillColor="#231815"/>
+    </group>
 </vector>
